--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "antd": "^4.20.5",
     "dotenv": "^16.0.1",
     "firebase": "^9.7.0",
     "react": "^17.0.2",
