1.Styling Navbar when isActive. 2.Create Product when click 'Create' in Navbar

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://koronagaba.github.io/foodStorage/",
   "name": "kitchen_handling",
   "version": "0.1.0",
   "private": true,
@@ -13,6 +14,7 @@
     "antd": "^4.20.5",
     "dotenv": "^16.0.1",
     "firebase": "^9.7.0",
+    "gh-pages": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -20,6 +22,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
