--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "antd": "^4.20.5",
+    "console-browserify": "^1.2.0",
     "dotenv": "^16.0.1",
     "firebase": "^9.7.0",
     "gh-pages": "^4.0.0",
@@ -46,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "2.6.2"
   }
 }
