--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "console-browserify": "^1.2.0",
     "dotenv": "^16.0.1",
     "firebase": "^9.7.0",
+    "flag-icons": "^6.6.2",
     "gh-pages": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
