--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "firebase": "^9.7.0",
     "flag-icons": "^6.6.2",
     "gh-pages": "^4.0.0",
+    "i18next": "^21.8.10",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.17.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
