--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "i18next": "^21.8.10",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
+    "i18next-locize-backend": "^5.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.17.2",
