--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
     "i18next-locize-backend": "^5.1.2",
+    "node-schedule": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.17.2",
@@ -55,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/node-schedule": "^2.1.0",
     "prettier": "2.6.2"
   }
 }
