--- a/package.json
+++ b/package.json
@@ -4,29 +4,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.21",
-    "@types/react": "^17.0.40",
-    "@types/react-dom": "^17.0.13",
-    "antd": "^4.20.5",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^17.0.45",
+    "@types/react": "^17.0.47",
+    "@types/react-dom": "^17.0.17",
+    "antd": "^4.21.6",
     "console-browserify": "^1.2.0",
     "dotenv": "^16.0.1",
-    "firebase": "^9.7.0",
-    "flag-icons": "^6.6.2",
+    "firebase": "^9.9.0",
+    "firebase-admin": "^11.0.0",
+    "firebase-functions": "^3.22.0",
+    "flag-icons": "^6.6.4",
     "gh-pages": "^4.0.0",
-    "i18next": "^21.8.10",
+    "i18next": "^21.8.14",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
     "i18next-locize-backend": "^5.1.2",
     "node-schedule": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-i18next": "^11.17.2",
+    "react-i18next": "^11.18.1",
     "react-scripts": "5.0.0",
-    "typescript": "^4.6.2",
+    "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -57,6 +59,7 @@
   },
   "devDependencies": {
     "@types/node-schedule": "^2.1.0",
+    "eslint": "^8.20.0",
     "prettier": "2.6.2"
   }
 }
