--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.4.5",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/lab": "^5.0.0-alpha.98",
+    "@mui/material": "^5.10.4",
+    "@mui/x-date-pickers-pro": "^5.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^17.0.45",
-    "@types/react": "^17.0.47",
+    "@types/react": "^18.0.19",
     "@types/react-dom": "^17.0.17",
-    "antd": "^4.21.6",
+    "antd": "^4.23.1",
     "console-browserify": "^1.2.0",
+    "craco-less": "^2.0.0",
     "dotenv": "^16.0.1",
     "firebase": "^9.9.0",
     "firebase-admin": "^11.0.0",
@@ -34,9 +41,9 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
