--- a/package.json
+++ b/package.json
@@ -4,12 +4,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.4.5",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@mui/lab": "^5.0.0-alpha.98",
-    "@mui/material": "^5.10.4",
-    "@mui/x-date-pickers-pro": "^5.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
@@ -19,7 +13,6 @@
     "@types/react-dom": "^17.0.17",
     "antd": "^4.23.1",
     "console-browserify": "^1.2.0",
-    "craco-less": "^2.0.0",
     "dotenv": "^16.0.1",
     "firebase": "^9.9.0",
     "firebase-admin": "^11.0.0",
@@ -32,8 +25,10 @@
     "i18next-locize-backend": "^5.1.2",
     "node-schedule": "^2.1.0",
     "react": "^17.0.2",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.18.1",
+    "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
@@ -41,9 +36,9 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -66,6 +61,7 @@
   },
   "devDependencies": {
     "@types/node-schedule": "^2.1.0",
+    "@types/react-datepicker": "^4.4.2",
     "eslint": "^8.20.0",
     "prettier": "2.6.2"
   }
