--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://koronagaba.github.io/foodStorage/",
+  "homepage": "https://koronagaba-foodstorage.netlify.app/",
   "name": "kitchen-handling",
   "version": "0.1.0",
   "private": true,
