--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
     "resolveJsonModule": true,
     "moduleResolution": "node",
+    "lib": ["es5", "es6", "dom"],
   },
   "include": [
     "src"
