--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
@@ -11,6 +15,7 @@
     "@types/react": "^18.0.19",
     "@types/react-dom": "^17.0.17",
     "antd": "^4.23.1",
+    "classnames": "^2.3.2",
     "console-browserify": "^1.2.0",
     "dotenv": "^16.0.1",
     "firebase": "^9.9.0",
